# pyramid-cookiecutter-starter

./: .gitignore  .travis.yml  CHANGES.txt  CONTRIBUTING.md  CONTRIBUTORS.txt  README.md  README.rst  appveyor.yml  cookiecutter.json  requirements-dev.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: ci-tests.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_it.py
{{cookiecutter.repo_name}}/: .coveragerc  MANIFEST.in  README.md  README.txt  development.ini  development.yaml  production.ini  production.yaml  pyproject.toml  pytest.ini  setup.cfg  setup.py  testing.ini  testing.yaml
{{cookiecutter.repo_name}}/tests/: base_conftest.py  base_test_it.py  base_test_views.py  sqlalchemy_conftest.py  sqlalchemy_test_functional.py  sqlalchemy_test_views.py  zodb_conftest.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: __init__.py  base___init__.py  base_routes.py  base_tests.py  tests.py  views.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/base_templates/: 404.jinja2  layout.jinja2  layout.mako  layout.pt  mytemplate.mako
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/base_views/: default.py  notfound.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/sqlalchemy_alembic/: env.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/sqlalchemy_models/: __init__.py  meta.py  mymodel.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/templates/: 404.mako  layout.jinja2  layout.mako  layout.pt  mytemplate.jinja2  mytemplate.mako  mytemplate.pt
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/views/: default.py
