[metadata]
name = {{ cookiecutter.repo_name }}
version = 0.0
description = {{ cookiecutter.project_name }}
long_description = file: README.txt, CHANGES.txt
classifiers =
    Programming Language :: Python
    Framework :: Pyramid
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
author = 
author_email = 
keywords = web pyramid pylons
url = 

[options]
packages = find_namespace:
include_package_data = True
install_requires =
    plaster_pastedeploy
    pyramid
    pyramid_{{ cookiecutter.template_language }}
    pyramid_debugtoolbar
    waitress
    {%- if cookiecutter.backend == 'sqlalchemy' %}
    alembic
    pyramid_retry
    pyramid_tm
    SQLAlchemy<2
    transaction
    zope.sqlalchemy
    {%- elif cookiecutter.backend == 'zodb' %}
    pyramid_retry
    pyramid_tm
    pyramid_zodbconn
    transaction
    ZODB
    {%- endif %}
zip_safe = False

[options.packages.find]
exclude = tests

[options.extras_require]
testing =
    WebTest
    pytest
    pytest-cov

[options.entry_points]
paste.app_factory =
    main = {{ cookiecutter.repo_name }}:main
{%- if cookiecutter.backend == 'sqlalchemy' %}
console_scripts =
    initialize_{{ cookiecutter.repo_name }}_db={{ cookiecutter.repo_name }}.scripts.initialize_db:main
{%- endif %}
